--- a/render.yaml
+++ b/render.yaml
@@ -12,6 +12,6 @@ services:
     buildCommand: |
       apt-get update && apt-get install -y tesseract-ocr
       pip install --upgrade pip
-      pip install -r requirements.txt
+      pip install -r server/requirements.txt
 
     startCommand: uvicorn server.main:app --host 0.0.0.0 --port 10000
