--- a/render.yaml
+++ b/render.yaml
@@ -14,4 +14,4 @@ services:
       pip install --upgrade pip
       pip install -r server/requirements.txt
 
-    startCommand: uvicorn server.main:app --host 0.0.0.0 --port 10000
+    startCommand: uvicorn server.main:app --host 0.0.0.0 --port $PORT
