--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -11,14 +11,23 @@ node_modules
 dist
 dist-ssr
 *.local
+
+# env
 .env
+.env.local
+.env.production
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
 .DS_Store
+Thumbs.db
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# firebase
+.firebase/
+firebase-debug.log
