--- a/server/.gitignore
+++ b/server/.gitignore
@@ -5,3 +5,33 @@ venv/
 # Byte-compiled / cache files
 __pycache__/
 *.py[cod]
+*$py.class
+# Distribution / packaging
+build/
+dist/
+.eggs/
+*.egg-info/
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis
+.pytest_cache/
+# Translations
+*.mo
+*.pot
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+# Flask stuff:
